--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,15 +4,15 @@
     package="com.hiscycleguide.android">
 
     <application
-        android:allowBackup="false"
         android:name=".HTGApplication"
+        android:allowBackup="false"
+        android:fullBackupContent="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.HisCycleGuide"
-        android:fullBackupContent="false">
+        android:usesCleartextTraffic="true">
 
         <activity
             android:name=".activity.SplashActivity"
@@ -23,17 +23,56 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LandingActivity" android:theme="@style/Theme.NoActionBar"/>
-        <activity android:name=".activity.auth.LoginActivity" android:theme="@style/Theme.NoActionBarAnimation" />
-        <activity android:name=".activity.auth.RegisterActivity" android:theme="@style/Theme.NoActionBarAnimation" />
-        <activity android:name=".activity.auth.SpouseActivity" android:theme="@style/Theme.NoActionBarAnimation" />
-        <activity android:name=".activity.auth.CompleteProfileActivity" android:theme="@style/Theme.NoActionBarAnimation" />
-        <activity android:name=".activity.MainActivity" android:theme="@style/Theme.NoActionBarAnimation"/>
-        <activity android:name=".activity.SettingActivity" android:theme="@style/Theme.NoActionBarAnimation"/>
-        <activity android:name=".activity.PeriodActivity" android:theme="@style/Theme.NoActionBarAnimation"/>
+
+        <activity
+            android:name=".activity.LandingActivity"
+            android:theme="@style/Theme.NoActionBar" />
+
+        <activity
+            android:name=".activity.auth.LoginActivity"
+            android:theme="@style/Theme.NoActionBarAnimation" />
+
+        <activity
+            android:name=".activity.auth.RegisterActivity"
+            android:theme="@style/Theme.NoActionBarAnimation" />
+
+        <activity
+            android:name=".activity.auth.SpouseActivity"
+            android:theme="@style/Theme.NoActionBarAnimation" />
+
+        <activity
+            android:name=".activity.auth.CompleteProfileActivity"
+            android:theme="@style/Theme.NoActionBarAnimation" />
+
+        <activity
+            android:name=".activity.MainActivity"
+            android:theme="@style/Theme.NoActionBarAnimation" />
+
+        <activity
+            android:name=".activity.PeriodActivity"
+            android:theme="@style/Theme.NoActionBarAnimation" />
+
+        <activity
+            android:name=".activity.NotificationActivity"
+            android:theme="@style/Theme.NoActionBarAnimation" />
+
+<!--        <service-->
+<!--            android:name=".service.AlarmService"-->
+<!--            android:enabled="true"-->
+<!--            android:exported="false" />-->
+
+        <receiver
+            android:name=".receiver.AlarmReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="AlarmReceiver" />
+            </intent-filter>
+        </receiver>
     </application>
 
-    <uses-permission android:name="android.permission.INTERNET"
+    <uses-permission
+        android:name="android.permission.INTERNET"
         tools:ignore="ManifestOrder" />
 
 </manifest>
